--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -106,17 +106,17 @@
       
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="YS9ocP6FNvM" data-toggle="modal" data-target="#trailer">
     <img src="http://ia.media-imdb.com/images/M/MV5BMTU0Mjg3MzkxOV5BMl5BanBnXkFtZTYwNDU1OTY3._V1_SX214_AL_.jpg" width="220" height="342">
-    <h2>Sideways</h2>
+    <h2>Sideways <span class="small">2004</span></h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="JNwNXF9Y6kY" data-toggle="modal" data-target="#trailer">
     <img src="http://ia.media-imdb.com/images/M/MV5BMjE2MzQwMTgxN15BMl5BanBnXkFtZTcwMDQzNjk2OQ@@._V1_SY317_CR0,0,214,317_AL_.jpg" width="220" height="342">
-    <h2>Star Wars: Episode V - The Empire Strikes Back</h2>
+    <h2>Star Wars: Episode V - The Empire Strikes Back <span class="small">1980</span></h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="XfQYHqsiN5g" data-toggle="modal" data-target="#trailer">
     <img src="http://ia.media-imdb.com/images/M/MV5BMjMzNDUwNTIyMF5BMl5BanBnXkFtZTcwNjMwNDg3OA@@._V1_SY317_CR17,0,214,317_AL_.jpg" width="220" height="342">
-    <h2>American History X</h2>
+    <h2>American History X <span class="small">1998</span></h2>
 </div>
 
     </div>
